fix grid box-shadow on mobile

--- a/src/front/scss/_grid.scss
+++ b/src/front/scss/_grid.scss
@@ -84,6 +84,10 @@ body {
       "footer";
   }
 
+  .app-grid__content {
+    box-shadow: none;
+  }
+
   .app-grid__sidebar {
     box-shadow: var(--grid-shadow);
   }
